--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AngularFlex": {
+    "Contact-Book": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/angular-flex",
+            "outputPath": "dist/contact-book",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "AngularFlex:build:production"
+              "buildTarget": "Contact-Book:build:production"
             },
             "development": {
-              "buildTarget": "AngularFlex:build:development"
+              "buildTarget": "Contact-Book:build:development"
             }
           },
           "defaultConfiguration": "development"
