--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contact-book",
+  "name": "angular-flex",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,9 +10,11 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.2",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
